suggestion-service/suggestion-service-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: suggestion-service
  name: suggestion-service
spec:
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 8000
  selector:
    app: suggestion-pod
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suggestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suggestion-pod 
  template:
    metadata:
      labels:
        app: suggestion-pod
    spec:
      containers:
      - image: vinothg2309/suggestion-service
        imagePullPolicy: Always
        name: suggestion-container
        ports:
        - name: suggestion-port
          containerPort: 8000
