suggestion-service/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-gateway
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: minikube
      http:
        paths:
          - path: /customer
            backend:
              serviceName: customer-service
              servicePort: 123
          - path: /loan
            backend:
              serviceName: loan-service
              servicePort: 801
          - path: /
            backend:
              serviceName: angular-service
              servicePort: 4200
          - path: /suggestion
            backend:
              serviceName: suggestion-service
              servicePort: 8000
